prototype/tabulata-1/WebContent/css/main.css
@CHARSET "UTF-8";

body {
	margin:0;
	padding:0;
	background: black;
	font-color: white;
	font-size: 13pt;
	font-family: "Droid Sans", "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;	
}

input {
	font-size: 10pt;
	border: inset 1px;
	border-radius: 3px/2px;
  	width:7em;
}

#pane fieldset {
	width: 220px;
}

input[type=radio] {
	width:20px;
}

input:focus {
	border-color: #e55;
}

table {
	border-spacing: 0px;
}

input[type=button] {
	padding:2px;
	background:#ddd;
}


.pane-input {
	width: 240px;
	border: outset 1px;
	font-size:11pt;
}

.pane-button  {
	width:100px;
}

.add-button {
		width:1.5em;
	
}

#info {
	font-size: 10pt;
	padding-top:10pt;
	padding-right:25pt;
	color:#333;
	position: float;
	float:right;
	font-family: "Droid Sans", "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
}

.hed-act , .inp-key {
	background: #dfd;
}

.inp-key {
	width: 15em;
}

.inp-value {
	width: 30em;
}


.inp-cal {
	background: #fdd;
}

.hed-act.shown-in-pane {
	background: #afa;
}

.inp-cal.shown-in-pane {
	background: #faa;
}

.shown-in-pane {
	background: #ffa;
}

#title {
	padding-left:8pt;
	padding-bottom:8pt;
	font-family: 'Fugaz One', cursive;
	font-size:28pt;
	font-color:black;
	background:white;
	position:fixed;
	top:0;
	left:0;
	width:100%;
}

#pane {
	position: fixed;
	top: 70px;
	right:20px;
	width:250px;
	border: 2px #555;
	border: inset 2px;
	border-radius: 3px/2px;
	background: #eee;
	font-color:#333;
	padding:5px;
	font-size:11pt;
	display:none;
	
	z-index:95;
}

#singulars {
	position:fixed;
	left:0;
	top:60px;
	width:100%;
	background:#000;
	border-bottom: 2px solid #fff;
	z-index:90;
}

#main {
	margin-bottom:30pt;
	-webkit-overflow-scrolling: touch;
	z-index:100;
	background: #000;
}

#bottom-singulars {
	font-size:5px;	
}

